@@ -153,6 +153,11 @@
 -->
 
 	<!--
+	    Cache to use for keyframe metadata.
+	-->
+	<bean id="keyframe.cache" class="org.red5.io.FileKeyFrameMetaCache" />
+
+	<!--
 	    Represents FLV files
 	    Use injection to set the cache impl to be used with flvs
 	-->
@@ -174,7 +179,7 @@
 		<property name="arguments" value="auto" />
 	</bean>
 	
-	<!-- Use injection to set the buffer type for reading FLV files -->
+	<!-- Use injection to set the buffer size for reading FLV files -->
 	<bean class="org.springframework.beans.factory.config.MethodInvokingFactoryBean">
 		<property name="targetObject">
 			<bean class="org.red5.io.flv.impl.FLVReader" />
@@ -184,6 +189,20 @@
 		</property>
 		<!-- Three buffer types are available 'auto', 'heap', and 'direct' -->
 		<property name="arguments" value="4096" />
+	</bean>
+
+	<!-- Use injection to set the keyframe cache for FLV files -->
+	<bean id="flvreader.impl" class="org.red5.io.flv.impl.FLVReader">
+		<property name="keyFrameCache">
+			<ref bean="keyframe.cache"/>
+		</property>
+	</bean>
+
+	<!-- Use injection to set the keyframe cache for MP3 files -->
+	<bean id="mp3reader.impl" class="org.red5.io.mp3.impl.MP3Reader">
+		<property name="frameCache">
+			<ref bean="keyframe.cache"/>
+		</property>
 	</bean>
 
 	<!-- ClientBroadcastStream and PlaylistSubscriberStream 
